Oct 18, 2024
  added module to import references from PMIDs found in HTPDATASET file submitted to the Alliance

Jul 01, 2024
  updated to java 17

Apr 18, 2023
  refactored to simplify code

Jan 27, 2023
  upgraded commons-dbcp from ver 1 to ver 2

Jan 10, 2023
  upgraded build script to the most recent gradle syntax