@@ -14,7 +14,7 @@ java {
     targetCompatibility = JavaVersion.VERSION_17
 }
 mainClassName = 'edu.mcw.rgd.ReferenceUpdatePipeline'
-String myAppName = 'ReferenceUpdatePipeline'
+String myAppName = 'reference-update-pipeline'
 
 project.archivesBaseName = myAppName
 
@@ -23,14 +23,14 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-dbcp2:2.10.0'
-    implementation 'commons-net:commons-net:3.7.2'
+    implementation 'org.apache.commons:commons-dbcp2:2.11.0'
+    implementation 'commons-net:commons-net:3.8.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
-    implementation 'jaxen:jaxen:1.1.6'
-    implementation 'org.apache.logging.log4j:log4j-core:2.24.0'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.24.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.8'
-    implementation 'com.io7m.xom:xom:1.2.10'
+    implementation 'jaxen:jaxen:1.2.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.24.1'
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.7.0.25.01'
+    implementation 'org.springframework:spring-jdbc:6.2.3'
+    implementation 'xom:xom:1.3.9'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
