@@ -1,3 +1,6 @@
+Feb 18, 2025
+  renamed distro to 'reference-update-pipeline'
+
 Oct 18, 2024
   added module to import references from PMIDs found in HTPDATASET file submitted to the Alliance
 
